[package]
name = "orca-sdk"
version = "0.5.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "orca sdk"
keywords = ["trade", "crypto", "finance", "solana", "orca"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/orca-sdk"

[dependencies]
solana-network-sdk = "0.2.2"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.0.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.4"
solana-commitment-config = "3.0.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
solana-account-decoder = "3.0.0"
base64 = "0.22.1"
zstd = "0.13.3"
chrono = "0.4.42"
solana-transaction = "3.0.1"
